// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App version should match snapshot for PRODUCTION environment 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-70"
  >
    <div
      class="MuiTypography-root makeStyles-root-71 makeStyles-root-72 MuiTypography-body1"
    >
      Version 1.0.0
    </div>
  </div>
</div>
`;

exports[`App version should match snapshot for UAT environment 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-2"
  >
    <div
      class="MuiTypography-root makeStyles-root-3 makeStyles-root-4 MuiTypography-body1"
    >
      Version 1.0.0 [UAT]
    </div>
  </div>
</div>
`;

exports[`App version should match snapshot for no environment variable 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-36"
  >
    <div
      class="MuiTypography-root makeStyles-root-37 makeStyles-root-38 MuiTypography-body1"
    >
      Version 1.0.0
    </div>
  </div>
</div>
`;
